--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -23,7 +23,7 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="../Instruction.html">Introduction</a></li>
+						<li><a href="../Biography.html">Biography</a></li>
 						<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 						<li><a href="../Notes/homepage.html">Notes</a></li>
 						<li><a href="../musical column/homepage.html">Musical Column</a></li>
@@ -66,13 +66,13 @@
 								<div class="inner">
 									<div class="row">
 										<div class="col-5 col-12-medium">
-											<a href="Review/Name.html"><span class="image fit"><img href="Review/Name.html" src="images/pic01.jpg" alt="" /></span></a>
+											<a href="#"><span class="image fit"><img href="#" src="images/SilenceBetweenSongs.jpg" alt="" /></span></a>
 										</div>
 										<div class="col-7 col-12-medium">
 											</br>
-											<h1 align="center"><a href="Review/Name.html"><span style="font-size: 110%">Did You Know That There's a Tunnel Under Ocean Blvd</span></a></h1>
-											<h3 align="center">Lana Del Rey</h3>
-											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
+											<h1 align="center"><a href="#"><span style="font-size: 110%"></br>Silence Between Songs</span></a></h1>
+											<h3 align="center">Madison Beer</h3>
+											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.09.15</p>
 											<h1 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h1>
 										</div>
 									</div>
@@ -85,28 +85,28 @@
 									<div id="module1" class="module active">
 										<div class="box alt">
 											<div class="row gtr-50 gtr-uniform">	
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/UTOPIA.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">UTOPIA</a></h4>
+													<h5 align="center">Travis Scott</h5>
+													<p align="center">Genre:Hip-Hop/Rap<br />Release date:2023.07.28</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/DYNTTATUOB.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Did you know that there's a tunnel under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<p align="center">Genre:Alternative<br />Release date:2023.03.24</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(22, 175, 186); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/DRIVE.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">DRIVE</a></h4>
+													<h5 align="center">Tiësto</h5>
+													<p align="center">Genre:Pop/Dance<br />Release date:2023.04.21</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(200, 49, 107); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/AutumnVariations.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Autumn Variations</a></h4>
+													<h5 align="center">Ed Sheeran</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.09.29</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
@@ -116,28 +116,22 @@
 									<div id="module2" class="module">
 										<div class="box alt">
 											<div class="row gtr-50 gtr-uniform">	
-												<div class="col-3"><span class="image fit"><a href="#"><img src="../images/pic1.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/PORTALS.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">PORTALS</a></h4>
+													<h5 align="center">Melanie Martinez</h5>
+													<p align="center">Genre:Alternative<br />Release date:2023.03.31</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/WorldMusicRadio.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">World Music Radio</a></h4>
+													<h5 align="center">Jon Batiste</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.08.18</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
-												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/1989TV.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">1989(Taylor's Version)(Deluxe)</a></h4>
+													<h5 align="center">Taylor Swift</h5>
+													<p align="center">Genre:Pop<br />Release date:2023.10.27</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
@@ -180,14 +174,14 @@
 								<div class="inner">
 									<div class="row">
 										<div class="col-5 col-12-medium">
-											<a href="Reviews/Name.html"><span class="image fit"><img href="Reviews/Name.html" src="images/pic01.jpg" alt="" /></span></a>
+											<a href="Review/Carrie&Lowell.html"><span class="image fit"><img href="Review/Carrie&Lowell.html" src="images/Carrie&Lowell.jpg" alt="" /></span></a>
 										</div>
 										<div class="col-7 col-12-medium">
 											</br>
-											<h1 align="center"><a href="Reviews/Name.html"><span style="font-size: 110%"></br>Carrie & Lowell</span></a></h1>
-											<h3 align="center">Lana Del Rey</h3>
-											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
-											<h1 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h1>
+											<h1 align="center"><a href="Review/Carrie&Lowell.html"><span style="font-size: 110%"></br>Carrie & Lowell</span></a></h1>
+											<h3 align="center">Sufjan Stevens</h3>
+											<p align="center">Genre:Alternative&emsp;&emsp;&emsp;Release date:2015.03.31</p>
+											<h1 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">9.6</span></h1>
 										</div>
 									</div>
 								</div>
@@ -199,35 +193,23 @@
 									<div id="module_new1" class="module_new active_new">
 										<div class="box alt">
 											<div class="row gtr-50 gtr-uniform">	
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/HappierThanEver.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Happier Than Ever</a></h4>
+													<h5 align="center">Billie Eilish</h5>
+													<p align="center">Genre:Alternative<br />Release date:2021.07.30</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
-												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
-													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
-												</div>
-												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
-													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
-													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+												<div class="col-3"><span class="image fit"><a href="#"><img src="images/GoldenHour.jpg" alt=""/></a></span>
+													<h4 align="center"><a href="#">Golden Hour</a></h4>
+													<h5 align="center">Kacey Musgraves</h5>
+													<p align="center">Genre:Country<br />Release date:2018.03.30</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
 										</div>
 									</div>
 
-									<div id="module_new2" class="module_new">
+									<!-- <div id="module_new2" class="module_new">
 										<div class="box alt">
 											<div class="row gtr-50 gtr-uniform">	
 												<div class="col-3"><span class="image fit"><a href="#"><img src="../images/pic1.jpg" alt=""/></a></span>
@@ -256,15 +238,14 @@
 												</div>
 											</div>
 										</div>
-									</div>
+									</div> -->
 
-									<ul align="center" class="pagination">
+									<!-- <ul align="center" class="pagination">
 										<li onclick="changeModule_new(1)"><span class="button small">Prev</span></li>
 										<li onclick="changeModule_new(1)"><a class="page">1</a></li>
 										<li onclick="changeModule_new(2)"><a class="page">2</a></li>
 										<li onclick="changeModule_new(2)"><span class="button small">Next</span></li>
-									</ul>
-									
+									</ul> -->
 									
 								</div>
 							</section>
