--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -88,25 +88,25 @@
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/UTOPIA.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">UTOPIA</a></h4>
 													<h5 align="center">Travis Scott</h5>
-													<p align="center">Genre:Hip-Hop/Rap<br />Release date:2023.07.28</p>
+													<p align="center">Hip-Hop/Rap<br />2023.07.28</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/DYNTTATUOB.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did you know that there's a tunnel under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
-													<p align="center">Genre:Alternative<br />Release date:2023.03.24</p>
+													<p align="center">Alternative<br />2023.03.24</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(22, 175, 186); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/DRIVE.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">DRIVE</a></h4>
 													<h5 align="center">Tiësto</h5>
-													<p align="center">Genre:Pop/Dance<br />Release date:2023.04.21</p>
+													<p align="center">Pop/Dance<br />2023.04.21</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(200, 49, 107); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/AutumnVariations.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Autumn Variations</a></h4>
 													<h5 align="center">Ed Sheeran</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.09.29</p>
+													<p align="center">Pop<br />2023.09.29</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
@@ -119,19 +119,19 @@
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/PORTALS.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">PORTALS</a></h4>
 													<h5 align="center">Melanie Martinez</h5>
-													<p align="center">Genre:Alternative<br />Release date:2023.03.31</p>
+													<p align="center">Alternative<br />2023.03.31</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/WorldMusicRadio.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">World Music Radio</a></h4>
 													<h5 align="center">Jon Batiste</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.08.18</p>
+													<p align="center">Pop<br />2023.08.18</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/1989TV.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">1989(Taylor's Version)(Deluxe)</a></h4>
 													<h5 align="center">Taylor Swift</h5>
-													<p align="center">Genre:Pop<br />Release date:2023.10.27</p>
+													<p align="center">Pop<br />2023.10.27</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
@@ -196,13 +196,13 @@
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/HappierThanEver.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Happier Than Ever</a></h4>
 													<h5 align="center">Billie Eilish</h5>
-													<p align="center">Genre:Alternative<br />Release date:2021.07.30</p>
+													<p align="center">Alternative<br />2021.07.30</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/GoldenHour.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Golden Hour</a></h4>
 													<h5 align="center">Kacey Musgraves</h5>
-													<p align="center">Genre:Country<br />Release date:2018.03.30</p>
+													<p align="center">Country<br />2018.03.30</p>
 													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
