--- a/Album/homepage.html
+++ b/Album/homepage.html
@@ -37,7 +37,7 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style2">
+					<section id="banner" class="style6">
 						<div class="inner">
 							<span class="image">
 								<img src="../images/pic6.jpg" alt="" />
@@ -86,27 +86,38 @@
 								</header>
 								
 								<details>
-									<summary class="major"><a>2023.12 月度总结</a></summary>
+									<summary class="major"><a>2023.12 月度</a></summary>
 									</br>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-3"><span class="image fit"><img src="../images/pic1.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div class="col-3"><span class="image fit"><img src="images/1.jpg" alt="" onclick="showModal(this)"/></span></div>
 											<div id="modal" class="modal" onclick="hideModal()">
 													<img id="modal-image" class="modal-image">
 												</div>
-											<div class="col-3"><span class="image fit"><img src="../images/pic1.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div class="col-3"><span class="image fit"><img src="images/2.jpg" alt="" onclick="showModal(this)"/></span></div>
 											<div id="modal" class="modal" onclick="hideModal()">
 													<img id="modal-image" class="modal-image">
 												</div>
-											<div class="col-3"><span class="image fit"><img src="../images/pic1.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div class="col-3"><span class="image fit"><img src="images/3.jpg" alt="" onclick="showModal(this)"/></span></div>
 											<div id="modal" class="modal" onclick="hideModal()">
 													<img id="modal-image" class="modal-image">
 												</div>	
-											<div class="col-3"><span class="image fit"><img src="../images/pic1.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div class="col-3"><span class="image fit"><img src="images/4.jpg" alt="" onclick="showModal(this)"/></span></div>
 											<div id="modal" class="modal" onclick="hideModal()">
 													<img id="modal-image" class="modal-image">
 												</div>
-												
+											<div class="col-3"><span class="image fit"><img src="images/5.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div id="modal" class="modal" onclick="hideModal()">
+													<img id="modal-image" class="modal-image">
+												</div>
+											<div class="col-3"><span class="image fit"><img src="images/6.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div id="modal" class="modal" onclick="hideModal()">
+													<img id="modal-image" class="modal-image">
+												</div>
+											<div class="col-3"><span class="image fit"><img src="images/7.jpg" alt="" onclick="showModal(this)"/></span></div>
+											<div id="modal" class="modal" onclick="hideModal()">
+													<img id="modal-image" class="modal-image">
+												</div>		
 										</div>
 									</div>
 								</details>
@@ -122,7 +133,7 @@
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">										
 											<video width="400" height="300" controls>
-											<source src="images/WeChat_20240121152453.mp4" type="video/mp4"></source></video>											 
+											<source src="videos/2023.mp4" type="video/mp4"></source></video>									 
 										</div>
 									</div>
 								</details>
@@ -137,11 +148,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+								<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+								<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+								<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+								<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Copyright:SennerWang</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
