--- a/Notes/homepage.html
+++ b/Notes/homepage.html
@@ -65,6 +65,11 @@
 									<!-- Content -->
 									<div class="row">
 										<div class="col-6 col-12-small">
+											<h3>Quantization of Vector Field & Feynman Rule for QED</br>矢量场量子化及量子电动力学费曼规则</h3>
+											<ul>
+												<li><a href="https://zhuanlan.zhihu.com/p/669344321">知乎</a>&nbsp&nbsp <a href="">pdf</a></li>
+											</ul>
+
 											<h3>Principle of Laser</br>激光原理</h3>
 											<ul>
 												<li><a href="https://zhuanlan.zhihu.com/p/563563288">知乎</a>&nbsp&nbsp <a href="">pdf</a></li>
