--- a/Scientific Works/homepage.html
+++ b/Scientific Works/homepage.html
@@ -30,10 +30,10 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="../Instruction.html">Introduction</a></li>
+						<li><a href="../Biography.html">Biography</a></li>
 						<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 						<li><a href="../Notes/homepage.html">Notes</a></li>
-						<li><a href="../Musical Column/homepage.html">Musical Column</a></li>
+						<li><a href="../musical column/homepage.html">Musical Column</a></li>
 						<li><a href="../Journal Entries/homepage.html">Journal Entries</a></li>
 						<li><a href="../Album/homepage.html">Album</a></li>
 					</ul>
@@ -69,7 +69,7 @@
 								</header>
 									<!-- Content -->
 									<div class="row">
-											<h3>Yet to be done</h3>
+											<p>Yet to be done</p>
 									</div>
 							</div>
 						</section>
@@ -79,85 +79,27 @@
 								<header class="major">
 									<h2>Codes & Documents</h2>
 								</header>
-									<!-- Content -->
-									<h3>Principle of Laser</br>激光原理</h3>
-											<ul>
-												<li><a href="#">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
-											</ul>
-
-											<h3>Introduction to Quantum Information:Basic Knowledge&nbsp</br>量子信息导论基础</h3>
-											<ul>
-												<li><a href="#">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
-											</ul>
+									<h3>Dissertation for bachelor's degree:</br>Regulation of the Radiation Field by Laser Polarization in Laser Compton Scattering</h3>
+									<ul>
+										<li><a href="documents/Dissertation.pdf">pdf</a></li>
+									</ul>
 							</div>
 						</section>
 					</div>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Contact Information</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a>wys2518@stu.pku.edu.cn</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(+86)13993164562</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Changchunyuan, Peking University<br />
-										Beijing, China<br />
-										Postal Code: 100871</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-
+			
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+								<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+								<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+								<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+								<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Copyright:SennerWang</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
+								<li>&copy; Copyright:SennerWang</li>
 							</ul>
 						</div>
 					</footer>
